--- a/react/visualizer-component/package.json
+++ b/react/visualizer-component/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "todolist",
+    "name": "visualizer-component",
     "private": true,
     "version": "0.0.0",
     "type": "module",
@@ -10,11 +10,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "clsx": "^2.1.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.15.0",
+        "@svgr/webpack": "^8.1.0",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
         "@vitejs/plugin-react": "^4.3.4",
